--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -18,6 +18,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Setup Pages
       uses: actions/configure-pages@v3
+    - name: Install rust target
+      uses: dtolnay/rust-toolchain@v1
+      with:
+        target: wasm32-unknown-unknown
     - name: Install trunk
       uses: jetli/trunk-action@v0.4.0
       with:
