--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install rust target
       uses: dtolnay/rust-toolchain@v1
       with:
+        toolchain: stable
         target: wasm32-unknown-unknown
     - name: Install trunk
       uses: jetli/trunk-action@v0.4.0
