--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build-and-publish:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -32,5 +32,15 @@ jobs:
     - name: Publish
       uses: actions/upload-pages-artifact@v2
       with:
-        path: dist
-      
+        path: dist/
+        
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
