--- a/.github/workflows/deploy_to_pages.yml
+++ b/.github/workflows/deploy_to_pages.yml
@@ -38,6 +38,8 @@ jobs:
         version: 'latest'
     - name: Build
       run: trunk build --release
+      env:
+        TRUNK_BUILD_PUBLIC_URL: /Task-Timer/
     - name: Publish
       uses: actions/upload-pages-artifact@v2
       with:
